# pencil-mcp-project

./: .gitignore  AGENTS.md  mcp.json  pyproject.toml  requirements.txt
.github/: pull_request_template.md
app/: config.py  constants.py  orchestrator.py  server.py
app/adapters/: llm_client.py  pencil_client.py
app/models/: __init__.py  analysis_schema.py  common.py  layout_plan_schema.py  presentation_schema.py  render_ops_schema.py
app/services/: analysis_service.py  render_service.py
app/tools/: chunk_scheduler.py  op_compiler.py  pencil_proxy_executor.py  verifier.py
docs/: commit_convention.md  json_schema.md  team_workflow_guide.md
plans/: README.md  REQ-ANL-001.md  REQ-AST-JSON-003.md  REQ-AST-JSON-004.md  REQ-ORCH-001.md  REQ-ORCH-002.md  REQ-VIS-MOD-001.md  REQ-VIS-MOD-002.md  REQ-VIS-MOD-003.md
tests/: test_ast_parser.py  test_chunk_scheduler.py  test_layout_plan_schema.py  test_op_compiler.py  test_pencil_proxy_executor.py  test_presentation_schema.py  test_render_ops_schema.py
