[build-system]
requires = ["setuptools>=43", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pencil-mcp-project"
version = "0.1.0"
description = "Pencil MCP Orchestration Server — Layout-to-Canvas Rendering Pipeline"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "anyio>=4.4.0",
    "httpx>=0.27.0",
    "starlette>=0.40.0,<0.48.0",
    "uvicorn>=0.29.0",
    "sse-starlette>=2.1.0",
    "aiofiles>=23.2.1",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
]

[project.scripts]
pencil-mcp-server = "app.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
